# cfn-opennext

./: .gitignore  Makefile  README.md  package-lock.json  package.json  template.yaml
pages/: index.tsx
services/next-app/: package-lock.json  package.json
services/next-app/components/: Carousel.tsx  FileUploader.tsx  Modal.tsx  RoundedImageCard.tsx  SharedModal.tsx
services/next-app/pages/: index.tsx
services/next-app/pages/api/: asset.ts
services/next-app/pages/p/: [photoIdx].tsx
services/next-app/utils/: cachedImages.ts  types.ts
services/resizer/: app.py  pyproject.toml
services/resizer/tests/: conftest.py  test_image_resizing.py
